# tauri-solidjs-fs-template

./: README.md  package.json  wdio.browser.conf.js  wdio.tauri.conf.js
docs/: contributing.org
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src/api/: index.js
src/api/browser/: hello.js  index.js  io.js
src/api/browser/test/: hello.test.js  io.test.js
src/api/tauri/: index.js
src/layout/: layout.jsx  layout.test.jsx
src/layout/components/hello/: index.js
src/store/: hello.js  store.js
src/store/test/: store.test.js
src/test/browser/: hello.test.jsx
src/test/common/: hello.js  index.js
src/test/tauri/: hello.test.js
