[package]
name = "tauri-solidjs-fs-template"
version = "0.0.1"
description = "Runs everywhere with isomorphic filesystem API"
authors = ["fetsorn"]
license = "GPLv3"
repository = "https://gitlab.com/norcivilian-labs/tauri-solidjs-fs-template"
edition = "2021"

[lib]
name = "template_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
time = "0.3.36" # to fix a rust version error in dependency tree https://github.com/time-rs/time/issues/693
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
futures-util = "0.3.31"
futures-core = "0.3.31"
async-stream = "0.3.6"
backtrace = "0.3.74"
crossterm = "0.28.1"
assert-json-diff = "2.0.2"
log = "0.4.25"
tauri-plugin-dialog = "2.2.0"
walkdir = "2.5.0"
tokio = "1.45.0"
temp-dir = { version = "0.1.16", git = "https://codeberg.org/fetsorn/temp-dir" }
clap = "4.5.42"
env = "1.0.1"
dirs = "6.0.0"
tauri-plugin-log = "2"

[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "android"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
libz-sys = { version = "1.1.2" }
